Melhorias de código

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gabriel Habermann</title>
+    <meta name="description" content="Gabriel Habermann Portfolio - Full Stack Developer">
+    <meta name="keywords" content="portfolio, desenvolvedor, developer, c#, .NET, backend, react, frontend, github">
+    <meta name="author" content="Gabriel Francisco Habermann">
+    <title>Gabriel F. Habermann</title>
   </head>
   <body>
     <div id="root"></div>
